--- a/src/framework/README
+++ b/src/framework/README
@@ -1,1 +1,2 @@
-tactic and command context frameworks.
+Command context provides the infrastructure for executing commands in front-ends such as SMT-LIB 2.0.
+It is also provides the solver abstraction to plugin solvers in this kind of front-end.
