added support for clang++ on Linux
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/README
+++ b/README
@@ -35,7 +35,7 @@ To uninstall Z3, use
 
   sudo make uninstall
 
-3) Building Z3 using clang++ on OSX
+3) Building Z3 using clang++ on Linux/OSX
 Remark: clang does not support OpenMP yet.   
 
    autoconf
