--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -5,6 +5,8 @@ Version 4.3.1
 
 - Added support for compiling Z3 using clang++ on Linux and OSX
 
+- Added missing compilation option (-D _EXTERNAL_RELEASE) in release mode.
+
 Version 4.3.0
 =============
 
