--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,10 @@
 RELEASE NOTES
 
+Version 4.3.2
+=============
+
+- Added get_version() and get_version_string() to Z3Py
+
 Version 4.3.1
 =============
 
