--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -5,6 +5,8 @@ Version 4.3.2
 
 - Added get_version() and get_version_string() to Z3Py
 
+- Added support for FreeBSD. Z3 can be compiled on FreeBSD using g++. 
+
 Version 4.3.1
 =============
 
