--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Z3 can be built using Visual Studio Command Prompt and make/g++.
 2) Building Z3 using make/g++ and Python
 Execute:
 
-   autconf
+   autoconf
    ./configure
    python scripts/mk_make.py
    cd build
