--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -10,6 +10,8 @@ Version 4.3.2
 - Reverted to `(set-option :global-decls false)` as the default. In Z3 4.3.0 and Z3 4.3.1, this option was set to true.
   Thanks to Julien Henry for reporting this problem.
 
+- Added `doc` directory and scripts for automatically generating the API documentation.
+
 Version 4.3.1
 =============
 
