--- a/doc/README
+++ b/doc/README
@@ -7,5 +7,16 @@ To generate the API documentation for the C, .NET and Python APIs, we must execu
 
 We must have doxygen installed in our system.
 
-The documentation will be stored in the subdirectory './html'.
-The main file is './html/index.html'
+The documentation will be stored in the subdirectory './api/html'.
+The main file is './api/html/index.html'
+
+Code documentation
+------------------
+
+To generate documentation for the Z3 code, we must execute
+
+   doxygen z3code.dox
+
+The documentation will be store in the subdirectory './code/html'.
+The main file is './code/html/index.html'
+
