--- a/doc/README
+++ b/doc/README
@@ -3,7 +3,7 @@ API documentation
 
 To generate the API documentation for the C, .NET and Python APIs, we must execute
 
-   python mk_doc.py
+   python mk_api_doc.py
 
 We must have doxygen installed in our system.
 
