--- a/doc/website.dox
+++ b/doc/website.dox
@@ -11,6 +11,7 @@
    This website hosts the automatically generated documentation for the Z3 APIs.
 
    - \ref capi 
+   - \ref cppapi
    - <a class="el" href="class_microsoft_1_1_z3_1_1_context.html">.NET API</a>
    - <a class="el" href="z3.html">Python API</a>
    - Try Z3 online at <a href="http://rise4fun.com/z3py">RiSE4Fun</a> using <a href="http://rise4fun.com/z3py">Python</a> or <a href="http://rise4fun.com/z3">SMT 2.0</a>.
