--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -16,6 +16,8 @@ Version 4.3.2
 
 - Fixed incorrect result returned by Z3_solver_get_num_scopes. (Thanks to Herman Venter). This bug was introduced in Z3 4.3.0
 
+- Java bindings. To enable them, we must use the option `--java` when executing the `mk_make.py` script. Example: `python scripts/mk_make.py --java 
+
 Version 4.3.1
 =============
 
