--- a/doc/website.dox
+++ b/doc/website.dox
@@ -13,6 +13,7 @@
    - \ref capi 
    - \ref cppapi
    - <a class="el" href="class_microsoft_1_1_z3_1_1_context.html">.NET API</a>
+   - <a class="el" href="namespacecom_1_1microsoft_1_1z3.html">Java API</a>
    - <a class="el" href="namespacez3py.html">Python API</a> (also available in <a class="el" href="z3.html">pydoc format</a>).
    - Try Z3 online at <a href="http://rise4fun.com/z3py">RiSE4Fun</a> using <a href="http://rise4fun.com/z3py">Python</a> or <a href="http://rise4fun.com/z3">SMT 2.0</a>.
 */
