--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -28,6 +28,8 @@ Version 4.3.2
 
 - Removed auxiliary constants created by the nnf tactic from Z3 models.
   
+- Fixed problem in the pretty printer. It was not introducing quotes for attribute names such as |foo:10|.
+
 Version 4.3.1
 =============
 
