--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -30,6 +30,21 @@ Version 4.3.2
   
 - Fixed problem in the pretty printer. It was not introducing quotes for attribute names such as |foo:10|.
 
+- Fixed bug when using assumptions (Thanks to Philippe Suter)
+  Consider the following example:
+      (assert F)
+      (check-sat a)
+      (check-sat)
+  If 'F' is unstatisfiable independently of the assumption 'a', and 
+  the inconsistenty can be detected by just performing propagation,
+  Then, version <= 4.3.1 may return
+      unsat
+      sat
+  instead of
+      unsat
+      unsat
+  We say may because 'F' may have other unsatisfiable cores.
+
 Version 4.3.1
 =============
 
