Fix bug reported at http://stackoverflow.com/questions/13923316/unprintable-solver-model
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -45,6 +45,8 @@ Version 4.3.2
       unsat
   We say may because 'F' may have other unsatisfiable cores.
 
+- Fixed bug reported at http://stackoverflow.com/questions/13923316/unprintable-solver-model
+
 Version 4.3.1
 =============
 
