Update RELEASE_NOTES with latest bug fix
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -47,6 +47,8 @@ Version 4.3.2
 
 - Fixed bug reported at http://stackoverflow.com/questions/13923316/unprintable-solver-model
 
+- Fixed timers on Linux and FreeBSD.
+
 Version 4.3.1
 =============
 
