--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -30,7 +30,7 @@ Version 4.3.2
   
 - Fixed problem in the pretty printer. It was not introducing quotes for attribute names such as |foo:10|.
 
-- Fixed bug when using assumptions (Thanks to Philippe Suter)
+- Fixed bug when using assumptions (Thanks to Philippe Suter and Etienne Kneuss)
   Consider the following example:
       (assert F)
       (check-sat a)
