--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -55,6 +55,8 @@ Version 4.3.2
 
 - Fixed bug reported at http://stackoverflow.com/questions/14307692/unknown-when-using-defs
 
+- Relax check_logic procedure. Now, it accepts coercions (to_real) automatically introduced by Z3. (Thanks to Paul Jackson). This is a fix for http://z3.codeplex.com/workitem/19.
+
 Version 4.3.1
 =============
 
