--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -57,6 +57,8 @@ Version 4.3.2
 
 - Relax check_logic procedure. Now, it accepts coercions (to_real) automatically introduced by Z3. (Thanks to Paul Jackson). This is a fix for http://z3.codeplex.com/workitem/19.
 
+- Fixed http://stackoverflow.com/questions/14524316/z3-4-3-get-complete-model.
+
 Version 4.3.1
 =============
 
