Fix bug reported at http://stackoverflow.com/questions/15226944/segmentation-fault-in-z3
Signed-off-by: Leonardo de Moura <leonardo@microsoft.com>

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -63,6 +63,8 @@ Version 4.3.2
 
 - Fixed bug reported at http://z3.codeplex.com/workitem/23 (Thanks to Paul Jackson).
 
+- Fixed bug reported at http://stackoverflow.com/questions/15226944/segmentation-fault-in-z3 (Thanks to Tianhai Liu).
+
 Version 4.3.1
 =============
 
