re-organization of muz
Signed-off-by: Nikolaj Bjorner <nbjorner@microsoft.com>

--- a/src/muz/README
+++ b/src/muz/README
@@ -1,1 +1,2 @@
-muZ and Quantifier Elimination modules
+muZ: routines related to solving satisfiability of Horn clauses and 
+solving Datalog programs.
