--- a/src/api/ml/README
+++ b/src/api/ml/README
@@ -6,3 +6,7 @@ On Windows, there are no less than four different ports of OCaml. The Z3 build
 system assumes that either the win32 or the win64 port is installed. This means
 that OCaml will use `cl' as the underlying C compiler and not the cygwin or
 mingw compilers. 
+
+By default, a make target called `ocamlfind_install' is added. This installs Z3
+into the ocamlfind package repository such that programs can be compiled via 
+ocamlfind.
