--- a/examples/ml/README
+++ b/examples/ml/README
@@ -15,8 +15,8 @@ for the byte-code version.
 If Z3 was installed into the ocamlfind package repository (see src/api/ml/README),
 then we can compile this example as follows:
 
-ocamlfind ocamlc -o ml_example.byte -custom -package Z3 -linkpkg -verbose
-ocamlfind ocamlopt -o ml_example -package Z3 -linkpkg -verbose
+ocamlfind ocamlc -o ml_example.byte -custom -package Z3 -linkpkg
+ocamlfind ocamlopt -o ml_example -package Z3 -linkpkg
 
 Note that the resulting binaries depend on the shared z3 library, which needs to be 
 in the PATH (Windows), LD_LIBRARY_PATH (Linux) or DYLD_LIBRARY_PATH (OSX). If Z3 was 
