--- a/examples/ml/README
+++ b/examples/ml/README
@@ -15,7 +15,7 @@ for the byte-code version.
 If Z3 was installed into the ocamlfind package repository (see src/api/ml/README),
 then we can compile this example as follows:
 
-ocamlfind ocamlc -o ml_example.byte -custom -package Z3 -linkpkg ml_example.ml
+ocamlfind ocamlc -o ml_example.byte -package Z3 -linkpkg ml_example.ml
 ocamlfind ocamlopt -o ml_example -package Z3 -linkpkg ml_example.ml
 
 Note that the resulting binaries depend on the shared z3 library, which needs to be 
