fix issue 153: assert rem/mod axiom no matter what is status of second argument
Signed-off-by: Nikolaj Bjorner <nbjorner@microsoft.com>

--- a/README
+++ b/README
@@ -41,3 +41,5 @@ Remark: clang does not support OpenMP yet.
    cd build
    make
 
+
+To clean Z3 you can delete the build directory and run the mk_make.py script again.
