--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,11 +3,13 @@ RELEASE NOTES
 Version 4.4
 =============
 
+- New feature: Support for the theory of floating-point numbers. This comes in the form of logics (QF_FP and QF_FPBV), tactics (qffp and qffpbv), as well as a theory plugin that allows theory combinations. Z3 supports the official SMT theory definition of FP (see http://smtlib.cs.uiowa.edu/theories/FloatingPoint.smt2) in SMT2 files, as well as all APIs.
+
 - New feature: Stochastic local search engine for bit-vector formulas (see the qfbv-sls tactic).
   See also: Froehlich, Biere, Wintersteiger, Hamadi: Stochastic Local Search 
   for Satisfiability Modulo Theories, AAAI 2015.
 
-- Fixed various bugs reported by Marc Brockschmidt, Venkatesh-Prasad Ranganath, Enric Carbonell, Morgan Deters, Tom Ball, and Codeplex users rsas, clockish, Heizmann.
+- Fixed various bugs reported by Marc Brockschmidt, Venkatesh-Prasad Ranganath, Enric Carbonell, Morgan Deters, Tom Ball, Malte Schwerhoff, and Codeplex users rsas, clockish, Heizmann.
 
 Version 4.3.2
 =============
