--- a/src/api/ml/README
+++ b/src/api/ml/README
@@ -1,6 +1,5 @@
-This directory is work in progress.
-
-We are currently working on a brand new ML API.
+This is the new ML API introduced with Z3 4.4. For the legacy bindings, please 
+refer to previous releases of Z3.
 
 On Windows, there are no less than four different ports of OCaml. The Z3 build 
 system assumes that either the win32 or the win64 port is installed. This means
