Cleanup: avoid defining reserved identifiers
These can cause problems when building against certain C++ standard
libraries. In particular, some versions of libstdc++ use __out as a variable
name, which conflicts with the SAL __out macro.

Also start using [[clang::fallthrough]] when compiling with Clang.

--- a/doc/z3api.dox
+++ b/doc/z3api.dox
@@ -1567,7 +1567,7 @@ PREDEFINED             = Z3_ast_opt:=Z3_ast \
                          Z3_bool_opt:=Z3_bool \
                          Z3_func_interp_opt:=Z3_func_interp \
                          Z3_model_opt:=Z3_model \
-                         __out_opt:=__out
+                         Z3_out_opt:=Z3_out
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then
 # this tag can be used to specify a list of macro names that should be expanded.
