Support building on OpenBSD.
Tested on OpenBSD amd64 -current with python2.7 and the base gcc and make.

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Execute:
 
 By default, it will install z3 executable at PREFIX/bin, libraries at PREFIX/lib, and include files at PREFIX/include,
 where PREFIX is the installation prefix used for installing Python in your system.
-It is usually /usr for most Linux distros, and /usr/local for FreeBSD.
+It is usually /usr for most Linux distros, and /usr/local for FreeBSD and OpenBSD.
 Use the following commands to install in a different prefix (e.g., /home/leo)
 
   python scripts/mk_make.py --prefix=/home/leo
