--- a/examples/ml/README
+++ b/examples/ml/README
@@ -17,6 +17,4 @@ ocamlfind ocamlc -o ml_example.byte -package Z3 -linkpkg ml_example.ml
 ocamlfind ocamlopt -o ml_example -package Z3 -linkpkg ml_example.ml
 
 Note that the resulting binaries depend on the shared z3 library, which needs to be 
-in the PATH (Windows), LD_LIBRARY_PATH (Linux) or DYLD_LIBRARY_PATH (OSX). If Z3 was 
-installed into ocamlfind, the path that should be added is 
-`ocamlfind printconf destdir`/Z3
+in the PATH (Windows), LD_LIBRARY_PATH (Linux) or DYLD_LIBRARY_PATH (OSX). 
